--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
       
       <p>
         At this time, this CLSI runs a striped-down version of LaTeX.  
-        To request the installation of a missin packet, please email me at
+        To request the installation of a missing packet, please email me at
         <a href='mailto:bardellie@gmail.com'>bardellie@gmail.com</a>.
       </p>
       
